--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^7.11.2",
+    "@sanity/image-url": "^1.2.0",
     "next": "15.5.4",
     "next-sanity": "^11.4.2",
     "react": "19.1.0",
